Edited README via GitHub

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-- placeholder -
+Locksize plugin for jQuery
+===========================
+
+A jQuery plugin to allow elements on a page to be switched out in an AJAXy manner without having screen jump due to elements being removed and restored, etc. It will work with any page element, but has not been tested on mass instances. 
